# arcbench

./: .gitignore  README.md  pyproject.toml
arcbench/: app.py
arcbench/data/: manifest.py  system.py
arcbench/screens/: category.py  completion.py  home.py  running.py  welcome.py
benchmarks/llama_cpp/: llama31.yaml
