[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcbench"
version = "0.1.0"
description = "Intel Arc GPU benchmark console for Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
arcbench = "arcbench.app:main"

[project.urls]
Homepage = "https://github.com/Wesley-Jakob-Gilbert/arcbench"
Repository = "https://github.com/Wesley-Jakob-Gilbert/arcbench"

[tool.hatch.build.targets.wheel]
packages = ["arcbench"]

[tool.hatch.build.targets.wheel.sources]
"benchmarks" = "arcbench/benchmarks"
